--- a/client/src/assets/styles/globals.css
+++ b/client/src/assets/styles/globals.css
@@ -1,9 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Tomorrow&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 #root {
-  @apply h-screen;
+  @apply font-Tomorrow h-screen;
 }
 
 body {
